src/test/resources/annotator/DuplicateEnumConstantName.proto
syntax = "proto3";

package annotator;

enum TestEnum {
    <error descr="Duplicate constant name: CONSTANT">CONSTANT</error> = 0;
    <error descr="Duplicate constant name: CONSTANT">CONSTANT</error> = 1;
}